# llm-evals-book

./: .gitignore  AGENTS.md  README.md  pyproject.toml
book/: Makefile  _quarto.yml  index.qmd
cleaned_notes/: 1759282978-data-evaluations-for-llm-apps.json  1759321380-structured-data-validation-and-classification.json  1759323531-llm-healing-formatting-workflow.json  1759341197-llm-healing-format-correction.json  1759341492-llm-healing-format-correction.json  1759342476-llm-healing-json-workflow.json  1759342699-llm-healing-json-formatting.json  1759342878-llm-healing-json-repair.json  1759343465-llm-healing-json-repair.json  1759350502-llm-healing-formatting-workflow.json  1759360804-llm-schema-validation-and-classification.json  1759499798-human-role-in-llm-evaluation.json  1759701152-humans-in-lm-evaluation.json  1759717526-human-in-the-loop-evaluation.json  1759779030-human-oversight-in-lm-evaluation.json  1759781361-humans-in-llm-evaluation.json  1759786130-golden-data-evaluation-risks.json  1760363935-llm-preference-elo-ranking.json  1760446902-llm-preference-elo-ranking.json  1760536817-detecting-ai-generated-text-patterns.json
raw_notes/: 1759282978-data-evaluations-for-llm-apps.txt  1759321380-structured-data-validation-and-classification.txt  1759323531-llm-healing-formatting-workflow.txt  1759350502-llm-healing-formatting-workflow.txt  1759360804-llm-schema-validation-and-classification.txt  1759701152-humans-in-lm-evaluation.txt  1759781361-humans-in-llm-evaluation.txt  1759786130-golden-data-evaluation-risks.txt  1760363935-llm-preference-elo-ranking.txt  (+1 more)
(+40 files in other folders)
