[project]
name = "llm-evals-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=0.3.33",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.8",
    "langchain-community>=0.3.11",
    "pytest>=8.4.2",
    "pyzotero>=1.5.13",
]
